--- a/styles/speakers.breakpoint.css
+++ b/styles/speakers.breakpoint.css
@@ -1,30 +1,37 @@
-@media screen and (max-width : 1270px) {
-    .speakersContainer{
-        grid-template-columns: repeat(3 , 1fr);
-    }
-    .masterClassListsContainer{
-        width: 90%;
-    }
+/* @media screen and (min-width: 1364px) {
+  .speakerLeftBox,
+  .speakerRightBox {
+    width: 50%;
+  }
+} */
+
+@media screen and (max-width: 1270px) {
+  .speakersContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .masterClassListsContainer {
+    width: 90%;
+  }
 }
 
-@media screen and (max-width : 900px) {
-    .speakersContainer{
-        grid-template-columns: repeat(2 , 1fr);
-    }
-    .masterContainer{
-        grid-template-columns: 1fr;
-    }
-    .videoBox{
-        right: 0;
-    }
-    .masterContentContainer{
-        left: 0;
-        top: 0;
-    }
+@media screen and (max-width: 900px) {
+  .speakersContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .masterContainer {
+    grid-template-columns: 1fr;
+  }
+  .videoBox {
+    right: 0;
+  }
+  .masterContentContainer {
+    left: 0;
+    top: 0;
+  }
 }
 
-@media screen and (max-width : 620px) {
-    .speakersContainer{
-        grid-template-columns: 1fr;
-    }
+@media screen and (max-width: 620px) {
+  .speakersContainer {
+    grid-template-columns: 1fr;
+  }
 }
